# pipo-ai

./: .editorconfig  README.md  alembic.ini  code.txt  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
pipo_ai/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  logging.py  settings.py  tkq.py
pipo_ai/db/: base.py  utils.py
pipo_ai/db/dao/: json_schema.py  pipeline.py
pipo_ai/db/migrations/: env.py
pipo_ai/db/migrations/versions/: 2024_03_23_14_42_1869e1b9f53c.py  2024_03_23_17_11_35e13baeae77.py  2024_03_23_17_13_e9d5a4cf60c4.py  2024_03_23_17_33_11a96aaf2997.py  2024_03_23_19_02_4c30b526b026.py  2024_03_23_19_21_34ba6a12a1b1.py  2024_03_23_20_11_dfc2a414b9ce.py  2024_03_23_20_27_aa9a3f114a27.py  2024_03_23_20_54_130bb420540a.py  2024_03_23_21_04_1fe1d3185682.py  2024_03_24_01_31_7e2eb314ce0b.py  2024_03_24_02_02_3951e40ef3b4.py
pipo_ai/db/models/: __init__.py  json_schema.py  jsonschema.py  pipeline.py
pipo_ai/services/: __init__.py  code_sandbox.py  json_schema.py
pipo_ai/tests/: __init__.py  code.txt  input.json  input_schema.json  output.json  test_pipeline.py
pipo_ai/web/: __init__.py  application.py  lifetime.py
pipo_ai/web/api/: __init__.py  router.py
pipo_ai/web/api/docs/: __init__.py
pipo_ai/web/api/echo/: __init__.py  views.py
pipo_ai/web/api/json_schema/: __init__.py  schema.py  views.py
pipo_ai/web/api/monitoring/: __init__.py
pipo_ai/web/api/pipeline/: __init__.py  run_code.py  schema.py  views.py
